--- a/userstyles/features/revert-video-list.user.css
+++ b/userstyles/features/revert-video-list.user.css
@@ -14,7 +14,7 @@
   i=!important;
   t=transparent;
 
-  ytd-watch-flexy {
+  ytd-watch-grid {
       #comment-teaser.ytd-watch-metadata {
           display: none;
       }
