--- a/userstyles/AdashimaaTube.user.css
+++ b/userstyles/AdashimaaTube.user.css
@@ -341,8 +341,8 @@ Support me: https://ko-fi.com/sapondanaisriwan
             #home-page-skeleton .rich-grid-media-skeleton,
             #home-page-skeleton .rich-shelf-videos .rich-grid-media-skeleton.mini-mode,
             #home-page-skeleton #home-container-media .rich-grid-media-skeleton.mini-mode {
-                min-width: calc(100% / var(--video-per-row) - 1.6rem);
-                max-width: calc(100% / var(--video-per-row) - 1.6rem);
+                min-width: calc(100% / var(--video-per-row) - 1.6rem) i;
+                max-width: calc(100% / var(--video-per-row) - 1.6rem) i;
             }
 
             /* 🏠 Restore Old Homepage */
